k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: oncosaferx-api
  labels:
    app: oncosaferx-api
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "80"
spec:
  type: ClusterIP
  selector:
    app: oncosaferx-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
